[package]
name = "md-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
unicode-width = "0.2"
textwrap = { version = "0.16", default-features = false, features = ["unicode-width"] }
